--- a/client/src/app/components/form/weekly-availability/weekly-availability.component.html
+++ b/client/src/app/components/form/weekly-availability/weekly-availability.component.html
@@ -25,7 +25,8 @@
                     [label]="day"
                     [labelClass]="'font-semibold text-gray-900 dark:text-gray-100'"
                     [(ngModel)]="availability[day].enabled"
-                    (ngModelChange)="toggleDay(day, $event)">
+                    (ngModelChange)="toggleDay(day, $event)"
+                    [disabled]="disabled">
                 </app-checkbox>
             </div>
 
@@ -50,7 +51,7 @@
                         <input
                             class="w-full px-2 sm:px-3 py-1.5 sm:py-2 text-xs sm:text-sm border border-gray-300 dark:border-gray-600 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-800 dark:text-gray-200 cursor-pointer"
                             [ngxTimepicker]="startPicker" [(ngModel)]="availability[day].timeRanges[i].start"
-                            (ngModelChange)="onTimeChange()" placeholder="Select time" readonly />
+                            (ngModelChange)="onTimeChange()" placeholder="Select time" readonly [disabled]="disabled" />
                         <ngx-material-timepicker #startPicker [format]="12"></ngx-material-timepicker>
                     </div>
 
@@ -61,12 +62,12 @@
                         <input
                             class="w-full px-2 sm:px-3 py-1.5 sm:py-2 text-xs sm:text-sm border border-gray-300 dark:border-gray-600 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-800 dark:text-gray-200 cursor-pointer"
                             [ngxTimepicker]="endPicker" [(ngModel)]="availability[day].timeRanges[i].end"
-                            (ngModelChange)="onTimeChange()" placeholder="Select time" readonly />
+                            (ngModelChange)="onTimeChange()" placeholder="Select time" readonly [disabled]="disabled" />
                         <ngx-material-timepicker #endPicker [format]="12"></ngx-material-timepicker>
                     </div>
 
                     <!-- Remove button with trash icon (only if more than 1 range) -->
-                    <app-button *ngIf="availability[day].timeRanges.length > 1" type="danger" size="sm"
+                    <app-button *ngIf="!disabled && availability[day].timeRanges.length > 1" type="danger" size="sm"
                         [htmlType]="'button'" [ariaLabel]="'Remove time range'" [iconOnly]="true" [hasIcon]="true"
                         [customClass]="'w-9 h-9 sm:w-10 sm:h-10 p-0 flex-shrink-0'"
                         (click)="removeTimeRange(day, i)">
@@ -82,7 +83,7 @@
                 </div>
 
                 <!-- Add button with + icon (green) -->
-                <app-button type="success" size="sm" [htmlType]="'button'" [ariaLabel]="'Add time range'"
+                <app-button *ngIf="!disabled" type="success" size="sm" [htmlType]="'button'" [ariaLabel]="'Add time range'"
                     [iconOnly]="true" [hasIcon]="true"
                     [customClass]="'w-9 h-9 sm:w-10 sm:h-10 p-0'" (click)="addTimeRange(day)">
                     <span icon>
@@ -102,10 +103,10 @@
     <!-- Buttons -->
     <div class="flex flex-col sm:flex-row sm:justify-end gap-2 mt-4">
         <app-button type="primary" [htmlType]="'button'" label="Select All Days" (click)="selectAll()"
-            [customClass]="'w-full sm:w-auto'">
+            [customClass]="'w-full sm:w-auto'" [disabled]="disabled">
         </app-button>
         <app-button type="secondary" [htmlType]="'button'" label="Clear All" (click)="clearAll()"
-            [customClass]="'w-full sm:w-auto'">
+            [customClass]="'w-full sm:w-auto'" [disabled]="disabled">
         </app-button>
     </div>
 
