--- a/client/src/app/components/badge/badge.component.html
+++ b/client/src/app/components/badge/badge.component.html
@@ -5,5 +5,5 @@
   'bg-red-500 text-white dark:bg-red-700': resolvedColor === 'danger',
   'bg-yellow-500 text-black dark:bg-yellow-600': resolvedColor === 'warning'
 }" class="px-2 py-1 rounded text-xs font-semibold">
-  {{ label }}
+  {{ readableTitle(label) }}
 </span>
