--- a/client/src/app/pages/client-setting/client-setting.component.html
+++ b/client/src/app/pages/client-setting/client-setting.component.html
@@ -188,7 +188,7 @@
 
                 <div class="flex flex-col">
                     <app-base-input label="Postal Code" name="billingPostalCode"
-                        [(ngModel)]="clientFormModel.billingAddress.postalCode" [required]="true">
+                        [(ngModel)]="clientFormModel.billingAddress.postalCode" [required]="true" [disabled]="readonly">
                     </app-base-input>
                     <app-error-message [errorMessage]="clientErrors.billingPostalCode"></app-error-message>
                 </div>
