Secondary contract is required for all tenants

--- a/client/src/app/pages/client-setting/client-setting.component.html
+++ b/client/src/app/pages/client-setting/client-setting.component.html
@@ -117,18 +117,18 @@
             </div>
         </app-section>
 
-        <app-section title="Secondary Contact (Optional)" subtitle="Backup contact for urgent updates.">
+        <app-section title="Secondary Contact" subtitle="Backup contact for urgent updates.">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div class="flex flex-col md:col-span-1">
                     <app-base-input label="Contact Name" name="secondaryContactName"
-                        [(ngModel)]="clientFormModel.secondaryContact.name" [disabled]="readonly">
+                        [(ngModel)]="clientFormModel.secondaryContact.name" [required]="true" [disabled]="readonly">
                     </app-base-input>
                     <app-error-message [errorMessage]="clientErrors.secondaryContactName"></app-error-message>
                 </div>
 
                 <div class="flex flex-col md:col-span-1">
                     <app-base-input label="Contact Email" name="secondaryContactEmail" type="email"
-                        [(ngModel)]="clientFormModel.secondaryContact.email" [disabled]="readonly">
+                        [(ngModel)]="clientFormModel.secondaryContact.email" [required]="true" [disabled]="readonly">
                     </app-base-input>
                     <app-error-message [errorMessage]="clientErrors.secondaryContactEmail"></app-error-message>
                 </div>
@@ -182,7 +182,8 @@
                 <div class="flex flex-col" *ngIf="clientFormModel.billingAddress.country === 'CA'">
                     <app-select-input label="Province" name="billingProvince"
                         [(ngModel)]="clientFormModel.billingAddress.province" [options]="provinceOptions"
-                        placeholder="-- Select Province --" [required]="true" [searchable]="true" [disabled]="readonly"></app-select-input>
+                        placeholder="-- Select Province --" [required]="true" [searchable]="true"
+                        [disabled]="readonly"></app-select-input>
                     <app-error-message [errorMessage]="clientErrors.billingProvince"></app-error-message>
                 </div>
 
@@ -201,7 +202,8 @@
             <app-error-message [errorMessage]="clientErrors.submit"></app-error-message>
         </div>
 
-        <app-sticky-action-bar *ngIf="!readonly" [message]="'Save to activate your client profile.'" [containerClass]="'px-0'">
+        <app-sticky-action-bar *ngIf="!readonly" [message]="'Save to activate your client profile.'"
+            [containerClass]="'px-0'">
             <app-button *ngIf="!isEditMode" [label]="'Submit'" type="primary" [htmlType]="'submit'" [fullWidth]="true"
                 size="lg" [customClass]="'w-full md:w-auto rounded-lg'">
             </app-button>
